--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
 - "1.13"
 - "1.14"
 - tip
-go_import_path: code.sajari.com/docconv
+go_import_path: github.com/indraoct/docconv
 notifications:
   email:
     - infra@sajari.com
